--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ArmPL"
 uuid = "a3c120ca-72c3-4971-9fe4-aa3394da81b6"
-authors = ["sailingnumbers JuliaArm"]
-version = "0.2.3"
+authors = ["JuliaArm"]
+version = "0.1"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
